# PhD_backup_folder

Dataset_research/MedicalAI/: medical_dataset_description.csv
Documents/Groningen/: HealthDocumentsJanuary2023.doc  Invitation Letter.docx  Invitation Letter.odt  PersonalDetails.doc
Documents/RRI/: 10102025_RRI KPIs Excerices.pptx  10102025_RRI KPIs Excerices_Officioso.pptx
Researches/Padchest/: Readme.md  main.py  pyproject.toml
Researches/Padchest/data/csv/: chest_x_ray_images_labels_sample.csv
Researches/Padchest/latex/: cup-journal.cls  example.bib  sample.aux  sample.bbl  sample.bbl-SAVE-ERROR  sample.bcf  sample.bcf-SAVE-ERROR  sample.blg  sample.fdb_latexmk  sample.fls  sample.run.xml  sample.tex
Researches/Padchest/scripts/: 1_eda_analysis.py
Researches/Padchest/src/: padchest_class.py
Researches/Syndata_generation/: NotebookLM prompts.docx.odt  review_related.md
