[project]
name = "padchest"
version = "0.1.0"
description = "Project to analyze the padchest dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.32.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
